--- a/MobileAppSource/android/app/src/main/AndroidManifest.xml
+++ b/MobileAppSource/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
          
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="bsmart_connect"
+        android:label="Smart Connect"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
